--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss-import": "^12.0.1",
     "rollup": "^1.29.1",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-require-context": "^1.0.0",
     "rollup-pluginutils": "^2.8.2",
