--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "python -m SimpleHTTPServer 2000",
-    "dev": "rollup --config -w",
-    "build": "rollup --config"
+    "start": "npm run dev",
+    "dev": "npm run analyze && run-p dev:*",
+    "build": "npm-run-all build:*",
+    "analyze": "wca analyze src/components/**/*.{js,ts} --format json --outFile docs/components.json",
+    "dev:rollup": "rollup --config -w",
+    "dev:serve": "npx live-server",
+    "build:rollup": "rollup --config"
   },
   "keywords": [
     "web components"
@@ -16,8 +20,11 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^9.7.4",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "cssnano": "^4.1.10",
     "glob": "^7.1.6",
+    "npm-run-all": "^4.1.5",
     "postcss": "^7.0.26",
     "postcss-each": "^0.10.0",
     "postcss-import": "^12.0.1",
@@ -27,7 +34,8 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-require-context": "^1.0.0",
     "rollup-pluginutils": "^2.8.2",
-    "uglifycss": "0.0.29"
+    "uglifycss": "0.0.29",
+    "web-component-analyzer": "^1.0.3"
   },
   "dependencies": {
     "lit-element": "^2.2.1"
