--- a/package.json
+++ b/package.json
@@ -1,40 +1,26 @@
 {
   "name": "base-components",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/main.js",
+  "directories": {
+    "doc": "docs",
+    "lib": "lib"
+  },
+  "dependencies": {},
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run dev",
-    "dev": "run-p dev:*",
-    "build": "npm-s build:*",
-    "dev:rollup": "rollup --config -w",
-    "build:rollup": "rollup --config"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "web components"
-  ],
-  "author": "Leif Riksheim",
-  "license": "MIT",
-  "devDependencies": {
-    "autoprefixer": "^9.7.4",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "cssnano": "^4.1.10",
-    "glob": "^7.1.6",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^7.0.26",
-    "postcss-each": "^0.10.0",
-    "postcss-import": "^12.0.1",
-    "rollup": "^1.29.1",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-require-context": "^1.0.0",
-    "rollup-pluginutils": "^2.8.2",
-    "uglifycss": "0.0.29"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/leifriksheim/base-components.git"
   },
-  "dependencies": {
-    "lit-element": "^2.2.1"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/leifriksheim/base-components/issues"
+  },
+  "homepage": "https://github.com/leifriksheim/base-components#readme"
 }
