--- a/docs/package.json
+++ b/docs/package.json
@@ -28,6 +28,8 @@
     "web-component-analyzer": "^1.0.3"
   },
   "dependencies": {
+    "highlight.js": "^9.18.1",
+    "hljs": "^6.2.3",
     "marked": "^0.8.2",
     "vue": "^2.6.11",
     "vue-hot-reload-api": "^2.3.4"
