--- a/lib/package.json
+++ b/lib/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "highlight.js": "^9.18.1",
-    "lit-element": "^2.2.1"
+    "lit-element": "^2.2.1",
+    "prettier": "^2.0.4"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.1.0",
