--- a/docs/package.json
+++ b/docs/package.json
@@ -32,7 +32,8 @@
     "hljs": "^6.2.3",
     "marked": "^0.8.2",
     "vue": "^2.6.11",
-    "vue-hot-reload-api": "^2.3.4"
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-router": "^3.1.6"
   },
   "staticFiles": {
     "staticPath": "static",
