--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "base-components",
-  "version": "1.0.0",
+  "name": "core-elements",
+  "version": "0.0.0",
   "description": "",
   "main": "dist/main.js",
   "directories": {
@@ -15,13 +15,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/leifriksheim/base-components.git"
+    "url": "git+https://github.com/core-elements/core-elements.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/leifriksheim/base-components/issues"
+    "url": "https://github.com/core-elements/core-elements/issues"
   },
-  "homepage": "https://github.com/leifriksheim/base-components#readme"
+  "homepage": "https://github.com/core-elements/core-elements#readme"
 }
