update css and package

--- a/lib/package.json
+++ b/lib/package.json
@@ -1,26 +1,36 @@
 {
-  "name": "base-components",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "name": "core-elements",
+  "version": "0.0.0",
+  "description": "Core UI Elements for the web",
+  "main": "dist/main.js",
+  "module": "dist/main.es.js",
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "web components"
   ],
   "author": "Leif Riksheim",
-  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/core-elements/core-elements.git"
+  },
+  "bugs": {
+    "url": "https://github.com/core-elements/core-elements/issues"
+  },
+  "homepage": "https://core-elements.netlify.com",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run dev",
     "dev": "run-p dev:*",
-    "build": "npm-s build:*",
+    "build": "run-s build:*",
     "dev:rollup": "rollup --config -w",
     "build:rollup": "rollup --config"
   },
   "dependencies": {
     "flatpickr": "^4.6.3",
     "highlight.js": "^9.18.1",
-    "lit-element": "^2.2.1",
-    "prettier": "^2.0.4"
+    "lit-element": "^2.2.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.1.0",
