fixing build command

--- a/docs/package.json
+++ b/docs/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run dev",
     "dev": "npm run analyze && run-p dev:*",
-    "build": "npm run analyze && npm-s build:*",
+    "build": "npm run analyze && run-s build:*",
     "analyze": "wca analyze ../lib/src/components/**/*.{js,ts} --format json --outFile static/components.json",
     "dev:markdown": "markdown-db create src -w",
     "dev:web": "parcel index.html",
