--- a/lib/package.json
+++ b/lib/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://core-elements.netlify.com",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run dev",
+    "start": "npm link && npm run dev",
     "dev": "run-p dev:*",
     "build": "run-s build:*",
     "dev:rollup": "rollup --config -w",
