--- a/lib/package.json
+++ b/lib/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://core-elements.netlify.com",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "np",
     "prepublish": "run-s build:*",
     "start": "npm link && npm run dev",
     "dev": "run-p dev:*",
@@ -40,6 +41,7 @@
     "babel-preset-env": "^1.7.0",
     "cssnano": "^4.1.10",
     "glob": "^7.1.6",
+    "np": "^6.2.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.26",
     "postcss-each": "^0.10.0",
