--- a/package.json
+++ b/package.json
@@ -8,10 +8,19 @@
     "lib": "lib"
   },
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": ""
+    "start": "run-p dev:*",
+    "dev": "run-p dev:*",
+    "build": "run-s build:*",
+    "release": "cd lib && npm run release",
+    "dev:lib": "cd lib && npm run dev",
+    "dev:docs": "cd docs && npm run dev",
+    "build:lib": "cd lib && npm run build",
+    "build:docs": "cd docs && npm run build"
   },
   "repository": {
     "type": "git",
